added_resolving_auth-service-model_integrating_verificationcode-for-users